--- a/client/src/Styles/DefaultLayout.css
+++ b/client/src/Styles/DefaultLayout.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Sora", sans-serif;
+  font-size: small;
 }
 
 #components-layout-demo-custom-trigger .trigger {
@@ -94,11 +95,34 @@ body {
 
 .buttondis {
   margin: 5px;
-  width: 80%;
+  width: 70%;
   background-color: #1890ff;
   color: #fff;
   
 }
 
+.datechange{
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
+.halfpagediv{
+  max-width: 75%;
+}
 
+.cusdatadiv{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  
+}
+.custsideinfodiv{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.sidebysideinput{
+  display: flex;
+  flex-direction: row;
+}
